etalon, project-inner, pravki

--- a/src/pug/3-0service.pug
+++ b/src/pug/3-0service.pug
@@ -16,10 +16,10 @@ block content
 					h1.h1 Услуги
 	.box
 		+breadcrumbs(['Главная', 'Услуги'])
-	.basic-services.basic-services_page.fade-down
+	.basic-services.basic-services_page
 		.box
-			h2.basic-services-title.h2 Основные услуги
-			.basic-services-wrapper
+			h2.basic-services-title.h2.fade-up Основные услуги
+			.basic-services-wrapper.fade-down
 				a(href="#").service-card
 					h4.service-card__title.h4 Co-location
 						span.service-card__t-arrow
