--- a/src/pug/404.pug
+++ b/src/pug/404.pug
@@ -22,7 +22,7 @@ block content
 				.side-bar-banner.js-stick
 					+link-banner('Узнать больше и заказать наши услуги', 'Перейти к услугам', 'side-banner-1.jpg')
 			.content-inner
-				.error-404.content-inner-group-min-w
+				.error-404.content-inner-group-min-w.fade-down
 					h2.h2.error-404__title Страница не найдена
 					p.text-primary.error-404__desc Такое иногда случается. Самые вероятные причины - устаревшая ссылка или страница была удалена. Перейдите на&ensp;
 						a(href="/") главную страницу
