--- a/src/pug/5-0project.pug
+++ b/src/pug/5-0project.pug
@@ -23,9 +23,9 @@ block content
 					+link-banner('Узнать больше и заказать наши услуги', 'Перейти к услугам', 'side-banner-1.jpg')
 			.content-inner
 				.projects
-					.projects-head
+					.projects-head.fade-up
 						h2.h2.projects-head__title Аренда серверных шкафов (стоек) либо площадей, для размещения оборудования с обеспечением гарантированного
-					.projects-body
+					.projects-body.fade-down
 						.projects-filters
 							.projects-filters__title Кейсы
 							form.projects-filters__form(action="#")
