--- a/src/pug/0-0index.pug
+++ b/src/pug/0-0index.pug
@@ -9,7 +9,7 @@ block config
 block content
 	.header-wrapper.header-wrapper_full-page
 		+contacts-header
-		.wrapper-bg(style="background-image:url('img/video.jpg')")
+		.wrapper-bg.wrapper-bg_video(style="background-image:url('img/video.jpg')")
 			.video-container
 				video.fillWidth(autoplay='', loop='',data-src='img/video.mp4', type='video/mp4')
 		.box
@@ -38,10 +38,10 @@ block content
 							.promo-reclame__icon
 								<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 62.9 58"><path fill="#fff" d="M31.5 0A31.5 31.5 0 0 0 0 31.5a32 32 0 0 0 9.1 22.4l.2.1h44.4l.1-.1a31.59 31.59 0 0 0 9.1-22.4A31.35 31.35 0 0 0 31.5 0zm21.8 53H9.7A30.58 30.58 0 0 1 53.1 9.9 30.36 30.36 0 0 1 62 31.5 30.74 30.74 0 0 1 53.3 53z"/><path fill="#fff" d="M23.9 37.2a9.5 9.5 0 1 1 15.2 0l.8.6a10.5 10.5 0 1 0-16.8 0zM11.5 58h40v-1h-40"/><path fill="#f9e220" d="M31 46.5v2h1v-2m-5 0v2h1v-2m7 0v2h1v-2m3 0v2h1v-2m-17 0v2h1v-2"/><path fill="#f9e220" d="M31.5 6a25.5 25.5 0 0 0-20.4 40.8l.8-.6A24.35 24.35 0 0 1 7 32h2.5v-1H7a24.44 24.44 0 0 1 6.8-16.5l2.3 2.3.7-.7-2.3-2.3A24.44 24.44 0 0 1 31 7v2.5h1V7a24.44 24.44 0 0 1 16.5 6.8l-2.3 2.3.7.7 2.3-2.3A24.44 24.44 0 0 1 56 31h-2.5v1H56a24.35 24.35 0 0 1-4.9 14.2l.8.6A25.5 25.5 0 0 0 31.5 6z"/><path fill="#f9e220" d="M48.5 28.7l-.2-1-13.6 2.5a3.38 3.38 0 0 0-3.2-2.2 3.5 3.5 0 1 0 3.5 3.5v-.3zm-17 5.3a2.5 2.5 0 1 1 2.5-2.5 2.48 2.48 0 0 1-2.5 2.5z"/></svg>
 							p.text-primary.promo-reclame__text Уровень доступности сервисов 99,982%
-	.basic-services.fade-down
+	.basic-services
 		.box
-			h2.basic-services-title.h2 Основные услуги
-			.basic-services-wrapper
+			h2.basic-services-title.h2.fade-up Основные услуги
+			.basic-services-wrapper.fade-down
 				a(href="#").service-card
 					h4.service-card__title.h4 Co-location
 						span.service-card__t-arrow
@@ -82,12 +82,12 @@ block content
 				//- 	span.service-card__link.link-button.link-button_small(href="#") Узнать больше
 				//- 	.service-card__icon
 				//- 		<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 64 63"><path fill="none" stroke="currentcolor" d="M27 48.5l-4-4-4 4m26 0l-4-4-4 4m-1 10l-4 4-4-4" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M23 44.5v11H0m41-11v11h23m-32-12v19" stroke-linejoin="round"/><circle cx="30" cy="14.5" r="7" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M44 5.5c5 0 10 6 10 12 5 0 9 5.1 9 11a12 12 0 0 1-12 12H13a12 12 0 0 1 0-24"/><circle cx="30" cy="14.5" r="3" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M25 35.5h-2m14 0h-2m-2 0h-2m-2 0h-2m14 0h-2" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M41 14.5V14l2.8-1.9a22.47 22.47 0 0 0-1.2-3.7l-3.4.1c-.2-.3-.4-.5-.6-.8l1.1-3.2a12.44 12.44 0 0 0-3.2-2.3l-2.7 2.1-.9-.3-1-3.3a12.31 12.31 0 0 0-2-.2 13.55 13.55 0 0 0-2 .2l-1 3.3-.9.3-2.7-2.1a14.43 14.43 0 0 0-3.2 2.3l1.1 3.2c-.2.3-.4.5-.6.8l-3.4-.1a12.34 12.34 0 0 0-1.2 3.7l3 1.9v1l-2.8 1.9a11.49 11.49 0 0 0 1.2 3.7l3.4-.1c.2.3.4.5.6.8l-1.1 3.2a12.44 12.44 0 0 0 3.2 2.3l2.7-2.1.9.3 1 3.3a12.31 12.31 0 0 0 2 .2 13.55 13.55 0 0 0 2-.2l1-3.3.9-.3 2.7 2.1a14.43 14.43 0 0 0 3.2-2.3l-1.1-3.2c.2-.3.4-.5.6-.8l3.4.1a12.34 12.34 0 0 0 1.2-3.7L41 15z"/></svg>
-			.server-graph(style="background-image:url('img/graph.gif')")
+			.server-graph.fade-down(style="background-image:url('img/graph.gif')")
 				p.server-graph__title 99,982%
 				p.server-graph__desc.text-primary Уровень доступности сервисов
-	.about-center.fade-down
+	.about-center
 		.box
-			.about-center__inner
+			.about-center__inner.fade-down
 				.about-center__title
 					h2.h2 Дата-центр velcom
 					p.text-primary Дата-центр — одно из новых направлений бизнеса известного телекоммуникационного бренда
@@ -103,12 +103,12 @@ block content
 					+link-more('Больше о дата-центре', 'about-center__link')
 				.about-center__build
 					img(src="img/data-canter.png", alt="clouds")
-		.about-center__clouds
+		.about-center__clouds.fade-up
 			img(src="img/clouds.png", alt="clouds")
-	.advantages.fade-down
+	.advantages
 		.box
-			h2.h2.advantages__title Размещение ИТ&#8209;инфраструктуры в ЦОД существенно снижает расходы на эксплуатацию и управление:
-			.advantages__slider
+			h2.h2.advantages__title.fade-up Размещение ИТ&#8209;инфраструктуры в ЦОД существенно снижает расходы на эксплуатацию и управление:
+			.advantages__slider.fade-down
 				.advantages__item
 					.advantages__check 
 						+icon('checked')
@@ -133,16 +133,15 @@ block content
 					.advantages__check
 						+icon('checked')
 					p.text-primary возможность минимизировать или сократить полностью затраты на приобретение оборудования
-			.advantages__btn-wrap
+			.advantages__btn-wrap.fade-up
 				a(href="#").link-consultation.js-popup-button(data-modal='get-consultation') Получить консультацию
 			.advantages__slider-dots
-		.advantages-decor(style="background-image:url('img/advantages-man-1.png')")
-	.main-news.fade-down
+		.advantages-decor.fade-up(style="background-image:url('img/advantages-man-1.png')")
+	.main-news
 		.box
-
-			.main-news__title
+			.main-news__title.fade-up
 				h2.h2 Новости дата-центра
 				+link-more('Все новости', 'main-news__more-news')
-			.main-news__wrap
+			.main-news__wrap.fade-down
 				+news-item('news-1.jpg', '«Классика у Ратуши с velcom» подарила минчанам фотовыставку с лучшими моментами фестиваля', '25 августа 2017', 'news-index')
 				+news-item('news-2.jpg', '#velcombegom: минские бегуны впервые проведут 24-часовую эстафету-марафон', '23 августа 2017', 'news-index')
