--- a/src/pug/4-0partners.pug
+++ b/src/pug/4-0partners.pug
@@ -22,7 +22,7 @@ block content
 				.side-bar-banner.js-stick
 					+link-banner('Узнать больше и заказать наши услуги', 'Перейти к услугам', 'side-banner-1.jpg')
 			.content-inner
-				.content-inner-group.fade-down
+				.content-inner-group.fade-up
 					h2.h2 Услуги по системной интеграции и проектные решения мы сможем оказать с помощью своих партнеров, уже реализовавших не один проект на базе ЦОД Velcom
 				.content-inner-group.fade-down
 					.partners
