--- a/src/sass/_main-nav.sass
+++ b/src/sass/_main-nav.sass
@@ -148,6 +148,8 @@
 	opacity: 0
 	transform: translateX(-20%)
 	transition: all 0.3s cubic-bezier(0.25, 0.5, 0.5, 0.9)
+	+r(980)
+		transform: translateX(20%)
 	&-inner
 		display: flex
 		flex-wrap: wrap
