--- a/src/sass/_repeat_block.sass
+++ b/src/sass/_repeat_block.sass
@@ -1,3 +1,199 @@
+.content-area
+	hr
+		border: none
+		height: 1px
+		background-color: #cccccc
+		margin-top: 68px
+		margin-bottom: 60px
+	h2
+		color: #000000
+		font-size: 32px
+		line-height: 1.4
+		font-weight: 400
+		max-width: 714px
+		margin-bottom: 40px
+	h3
+		color: #000000
+		font-size: 20px
+		line-height: 1.7
+		font-weight: 400
+		max-width: 714px
+		margin-bottom: 22px
+	h4
+		color: #000000
+		font-size: 18px
+		line-height:  1.333
+		font-weight: 800
+		max-width: 714px
+	p
+		font-size: 16px
+		line-height: 1.5
+		color: #767a7d
+		font-weight: 400
+		max-width: 714px
+		margin-bottom: 20px
+		img
+			max-width: 280px
+			&[align="left"]
+				margin-right: 40px
+				margin-bottom: 20px
+			&[align="right"]
+				margin-top: 55px
+				margin-left: 30px
+		small
+			font-size: 14px
+			line-height: 1.714
+			color: #767a7d
+			font-weight: 400
+	a
+		strong
+			color: #000000
+			font-weight: bold
+			+tr(all .3s ease)
+		&:hover
+			strong
+				color: #ecdc00
+	.youtube
+		display: block
+		width: 100%
+		max-width: 714px
+		margin-top: 50px
+		margin-bottom: 50px
+		background-color: #ccc
+
+	.datacenter-characteristics
+		width: 100%
+		margin-top: 40px
+		margin-bottom: 40px
+		display: flex
+		flex-wrap: wrap
+		&__item
+			width: 31%
+			margin-right: 2%
+			margin-bottom: 20px
+			&:last-child
+				margin-right: 2%
+
+	.inner-slider
+		width: 100%
+		max-width: 714px
+		margin-top: 42px
+		margin-bottom: 40px
+	
+	.parameters-table-wrap
+		padding-top: 20px
+
+	.bg-gray
+		margin-top: 68px
+		padding-top: 60px
+		padding-bottom: 45px
+		margin-bottom: 63px
+
+	ul
+		max-width: 714px
+		margin-top: 42px
+		li
+			padding-left: 2.5rem
+			margin-bottom: 24px
+			position: relative
+			font-size: 1rem
+			line-height: 1.5
+			color: #767a7d
+			font-weight: 400
+			&:after
+				content: ""
+				display: block
+				background-color: #f2db00
+				width: 8px
+				height: 8px
+				-webkit-border-radius: 50%
+				border-radius: 50%
+				position: absolute
+				left: 0
+				top: 8px
+	ol
+		max-width: 714px
+		margin-top: 37px
+		counter-reset: item
+		li
+			padding-left: 2.5rem
+			margin-bottom: 24px
+			position: relative
+			font-size: 1rem
+			line-height: 1.5
+			color: #767a7d
+			font-weight: 400
+			counter-increment: item
+			&:after
+				content: counter(item) "."
+				color: #000000
+				display: block
+				width: 8px
+				height: 8px
+				position: absolute
+				left: 0
+				top: 0
+	.data-center-cooperation
+		padding: 0
+	blockquote
+		max-width: 714px
+
+.content-area-footer
+	margin-top: 100px
+	margin-bottom: 10px
+
+.youtube
+	position: relative
+	padding-bottom: 50%
+	contain: layout
+	overflow: hidden
+	width: 100%
+	height: 0
+	margin-top: 10px
+	.play-button
+		position: absolute
+		width: 3.125rem
+		height: 3.125rem
+		top: 50%
+		left: 50%
+		transform: translateX(-50%) translateY(-50%)
+		z-index: 1
+		cursor: pointer
+		transition: color .3s
+		color: #fff
+		font-size: 40px
+	iframe,
+	img
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+
+blockquote
+	width: 100%
+	background-color: #f9f9f9
+	padding: 50px 40px 40px 60px
+	i
+		display: block
+		color: #767a7d
+		font-size: 16px
+		line-height: 1.5
+		font-style: italic
+		margin-bottom: 25px
+		position: relative
+		&::before
+			content: '\201C'
+			font-size: 48px
+			line-height: 40px
+			position: absolute
+			left: -30px
+			top: 0
+	span
+		display: block
+		font-size: 14px
+		line-height: 1.714
+		color: #494949
 .h1
 	color: #ffffff
 	font-size: 48px
@@ -49,6 +245,7 @@
 	height: 100%
 	margin: 0 auto
 	padding: 0 16px
+	font-size: 0
 	&_inner
 		position: relative
 	
@@ -138,19 +335,21 @@
 	+tr(all .5s ease .5s)
 	&__phones
 		display: flex
+		padding-right: 10px
 	&__link
 		display: flex
 		align-items: center
 		font-size: 21px
 		letter-spacing: -0.02em
-		margin-left: 37px
+		margin-left: 50px
 		span
 			display: block
 			opacity: .5
 			margin-left: 10px
 			font-size: 9px
 			line-height: 1
-			max-width: 48px
+			max-width: 70px
+			text-transform: uppercase
 	&.active
 		transform: translate(-50%, 0)
 		opacity: 1
@@ -237,11 +436,16 @@
 		font-size: 48px
 		line-height: 1.167
 		font-weight:bold
+		color: #ffffff
 	&__desc
 		max-width: 160px
+		color: #ffffff
 	&_data
 		margin-top: 50px
 		margin-bottom: 65px
+	&_data &__value,
+	&_data &__desc
+		color: #000000
 	+r(768)
 		&__item
 			margin-bottom: 16px
@@ -343,8 +547,9 @@
 			display: none
 
 .breadcrumbs
-	margin-top: 45px
-	margin-bottom: 30px
+	padding-top: 45px
+	padding-bottom: 16px
+	font-size: 0
 	&__link
 		display: inline-block
 		font-size: 9px
@@ -373,6 +578,9 @@
 	background-repeat: no-repeat
 	background-position: center center
 	background-size: cover
+	&_video
+		position: fixed
+		z-index: 0
 	&:before
 		content: ''
 		+coverdiv
@@ -413,6 +621,7 @@
 .content-wrap
 	display: flex
 	padding-bottom: 90px
+	padding-top:
 	+r(768)
 		flex-direction: column
 	+r(620)
@@ -421,14 +630,17 @@
 .side-bar
 	width: 25%
 	padding-right: 20px
+	box-sizing: border-box
 	z-index: 2
 	// &__nav
 	// 	padding-bottom: 40px
 	+r(768)
 		width: 100%
 		padding-right: 0
-
+// .side-bar-banner
+// 	margin-top: 20px
 .side-bar-nav
+
 	&__mob-btn
 		display: none
 		font-size: 16px
@@ -441,7 +653,7 @@
 			height: 5px
 			width: 8px
 			position: absolute
-			right: -15px
+			right: 15px
 			top: 50%
 			transform: translateY(-50%)
 			+tr(all .3s ease)
@@ -450,21 +662,23 @@
 				top: 0
 				left: 0
 		&_visible
-			margin-bottom: 20px
 			span.link-i-arrow
 				transform: translateY(-50%) rotate(180deg)
 	+r(768)
 		border: 1px solid #a6a6a6
-		padding: 18px 30px 18px 15px
 		&__mob-btn
+			padding: 18px 30px 18px 15px
 			display: block
 		& .link-navigation
+			padding-left: 15px
+			padding-bottom: 18px
 			display: none
 
 .content-inner
 	width: 75%
 	&__title
 		line-height: 1.406
+		max-width: 741px
 	+r(768)
 		width: 100%
 		margin-top: 30px
@@ -511,6 +725,8 @@
 	&-wrap
 		display: flex
 		flex-wrap: wrap
+		+r(650)
+			justify-content: space-between
 	&-min-w
 		max-width: 714px
 	&__title
@@ -518,9 +734,7 @@
 	+r(980)
 		margin-bottom: 50px
 		padding-bottom: 40px
-	+r(650)
-		&__wrap
-			justify-content: space-between
+	
 
 .worker-item
 	display: flex
@@ -559,11 +773,11 @@
 			max-height: 236px
 			max-width: 236px
 	+r(650)
-		width: 45.92%
-		margin-right: 0
+		width: 48%
+		margin-right: 0 !important
 		&__photo
-			max-height: 158px
-			max-width: 158px
+			max-height: 100%
+			max-width: 100%
 
 .document-item
 	display: flex
@@ -755,7 +969,7 @@
 	height: 100%
 	max-width: 240px
 	background-color: #f2f4f6
-	padding: 35px 10px
+	padding: 35px 10px 30px 30px
 	text-align: center
 	background-size: cover
 	background-repeat: no-repeat
@@ -789,94 +1003,130 @@
 	display: flex
 	justify-content: space-between
 	flex-wrap: wrap
-.partners-icon
-	width: 22%
-	+r(1100)
-		width: 24%
-	+r(980)
-		width: 30%
-		margin-bottom: 35px
-	+r(480)
-		width: 50%
-.partners-icon-outer
-	width: 100%
-	height: 0
-	position: relative
-	padding-bottom: 100%
-.partners-icon-inner
-	+coverdiv
-	+vertical
-	border: 1px solid #cccccc
-.partners-icon-logo
-	display: inline-block
-	vertical-align: middle
-	width: 70%
-.partners-info
-	width: 72%
-	+r(1100)
-		width: 74%
-	+r(980)
-		width: 100%
-.partners-info-header
-	margin-bottom: 40px
-	+r(1100)
-		margin-bottom: 35px
-.partners-info-body
-	display: flex
-	justify-content: space-between
-	flex-wrap: wrap
-	margin-bottom: 35px
-.partners-info-decription
-	width: 57%
-	font-size: 16px
-	line-height: 1.5
-	+r(980)
-		width: 100%
-.partners-info-using
-	width: 38%
-	padding-left: 40px
-	border-left: 1px solid #cccccc
-	font-size: 14px
-	line-height: 1.714
-	+r(1100)
-		padding-left: 20px
-	+r(980)
-		width: 100%
-		padding-left: 0
-		border: none
-.partners-info-footer
-	font-size: 14px
-.partners-info-pluses-wrap
-	display: flex
-	flex-wrap: wrap
-.partners-info-pluses
-	font-size: 16px
-	width: 30%
-	padding-left: 20px
-	margin-right: 4%
-	margin-top: 18px
-	position: relative
-	&::before
-		content: ''
-		display: block
-		width: 5px
-		height: 5px
-		position: absolute
-		left: 0
-		top: 5px
-		background-color: #000000
-		border-radius: 50%
-	&:nth-child(3n)
-		margin-right: 0
-	+r(1100)
-		width: 48%
-		&:nth-child(3n)
+	&-icon
+		width: 22%
+		+r(1100)
+			width: 24%
+		+r(980)
+			width: 30%
+			margin-bottom: 35px
+		+r(480)
+			width: 50%
+		&-outer
+			width: 100%
+			height: 0
+			position: relative
+			padding-bottom: 100%
+		&-inner
+			+coverdiv
+			+vertical
+			border: 1px solid #cccccc
+		&-logo
+			display: inline-block
+			vertical-align: middle
+			width: 70%
+	&-info
+		width: 72%
+		+r(1100)
+			width: 74%
+		+r(980)
+			width: 100%
+		&-header
+			margin-bottom: 40px
+			&-type
+				margin-bottom: 15px
+			&-link
+				display: inline-block
+				font-size: 16px
+				margin-top: 10px
+				color: #000000
+			+r(1100)
+				margin-bottom: 35px
+		&-body
+			display: flex
+			justify-content: space-between
+			flex-wrap: wrap
+			margin-bottom: 35px
+		&-decription
+			width: 57%
+			font-size: 16px
+			line-height: 1.5
+			+r(980)
+				width: 100%
+		&-using
+			width: 38%
+			padding-left: 40px
+			border-left: 1px solid #cccccc
+			font-size: 14px
+			line-height: 1.714
+			+r(1100)
+				padding-left: 20px
+			+r(980)
+				width: 100%
+				padding-left: 0
+				border: none
+		&-footer
+			font-size: 14px
+		&-pluses
+			font-size: 16px
+			width: 30%
+			padding-left: 20px
 			margin-right: 4%
-		&:nth-child(2n)
-			margin-right: 0
-	+r(480)
-		width: 100%
-		margin-right: 0 !important
+			margin-top: 18px
+			position: relative
+			&-wrap
+				display: flex
+				flex-wrap: wrap
+			&::before
+				content: ''
+				display: block
+				width: 5px
+				height: 5px
+				position: absolute
+				left: 0
+				top: 5px
+				background-color: #000000
+				border-radius: 50%
+			&:nth-child(3n)
+				margin-right: 0
+			+r(1100)
+				width: 48%
+				&:nth-child(3n)
+					margin-right: 4%
+				&:nth-child(2n)
+					margin-right: 0
+			+r(480)
+				width: 100%
+				margin-right: 0 !important
+	&-project
+		max-width: 751px
+	&-project &-info
+		+r(1100)
+			width: 72%
+		+r(980)
+			width: 100%
+		&-decription
+			width: 100%
+			color: #767a7d
+		&-header
+			margin-bottom: 45px
+	&-project &-icon
+		width: 28%
+		+r(980)
+			width: 30%
+			margin-bottom: 35px
+		+r(480)
+			width: 50%
+	&-project &-info
+		padding-left: 40px
+		padding-top: 5px
+		+r(980)
+			padding-left: 0
+		&-body
+			width: 90%
+			margin-bottom: 0
+			+r(980)
+				width: 100%
 
 .projesct-item
 	display: block
@@ -909,7 +1159,7 @@
 		width: 100%
 		display: flex
 		justify-content: space-between
-		align-items: center
+		align-items: flex-start
 		margin-bottom: 20px
 		padding-bottom: 20px
 	&__t-text
@@ -1033,31 +1283,44 @@
 	display: inline-block
 	vertical-align: middle
 	position: relative
+	padding: 0 30px
 	&>div
 		display: inline-block
 		vertical-align: middle
-		+rem(font-size,16px)
-		color: color(textblk)
+		font-size: 14px
+		line-height: 2.43
+		color: #767a7d
 		text-align: center
 	.slider-curr
-		font-weight: 600
+		color: #000000
 	.slider-divider
-		+padlr(5px)
-
+		+padlr(8px)
+	
+.inner-slider-nav
+	margin-top: 34px
 .inner-slider__prev,
 .inner-slider__next
+	display: inline-block
 	width: 6px
-	height: 10px
+	height: 12px
+	vertical-align: middle
+	position: relative
 	color: #000000
 	&.slick-disabled
 		color: rgba(#000000, .5)
+	&>svg
+		position: absolute
+		top: 0
+		left: 0
+.inner-slider__prev
+	transform: rotate(180deg)
 
 
 /* animated block*/
 .fade-down
 	transform: translateY(100px)
 	opacity: 0
-	+tr(all .3s ease .2s)
+	+tr(all .3s ease .35s)
 	&.active
 		transform: translateY(0)
 		opacity: 1
@@ -1065,7 +1328,7 @@
 .fade-up
 	transform: translateY(-50px)
 	opacity: 0
-	+tr(all .3s ease .35s)
+	+tr(all .3s ease .55s)
 	&.active
 		transform: translateY(0)
 		opacity: 1
