pages: contacts, services-inner ~85%

--- a/src/pug/0-0index.pug
+++ b/src/pug/0-0index.pug
@@ -134,7 +134,7 @@ block content
 						+icon('checked')
 					p.text-primary возможность минимизировать или сократить полностью затраты на приобретение оборудования
 			.advantages__btn-wrap.fade-up
-				a(href="#").link-consultation.js-popup-button(data-modal='get-consultation') Получить консультацию
+				a.link-consultation.js-popup-button(href="#", data-modal='get-consultation') Получить консультацию
 			.advantages__slider-dots
 		.advantages-decor.fade-up(style="background-image:url('img/advantages-man-1.png')")
 	.main-news
