--- a/src/sass/_repeat_block.sass
+++ b/src/sass/_repeat_block.sass
@@ -226,6 +226,8 @@ blockquote
 	font-weight: 400
 	&_black
 		color: #000000
+	&_bold
+		font-weight: bold
 
 .text-increased
 	font-size: 20px
@@ -238,6 +240,10 @@ blockquote
 	line-height: 1.714
 	color: #767a7d
 	font-weight: 400
+	&_black
+		color: #000000
+	&_bold
+		font-weight: bold
 
 .box
 	width: 100%
