--- a/src/pug/_layout.pug
+++ b/src/pug/_layout.pug
@@ -29,6 +29,7 @@ html(lang="ru")
 			include includes/_modals.pug
 		//END out
 
-
+		
 		script(src="js/lib.min.js")
 		script(src="js/common.min.js")
+		script(async='', defer='', src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-BA7S7AeddVlp47Y5adBcBhRVjlhWIug&callback=initMap", type="text/javascript")
